--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@angular/service-worker": "~10.2.0",
     "dexie": "^3.0.3",
     "lottie-web": "^5.7.4",
+    "ng-navigator-share": "^1.0.4",
     "ngx-lottie": "^6.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
